@@ -1,3 +1,10 @@
+2004-10-18  Wim Taymans  <wim@fluendo.com>
+
+	* ext/dv/gstdvdec.c: (gst_dvdec_init), (gst_dvdec_video_getcaps),
+	(gst_dvdec_video_link), (gst_dvdec_push), (gst_dvdec_loop):
+	* ext/dv/gstdvdec.h:
+	Make sure we renegotiate aspect ratio when the camera switches.
+
 2004-10-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_src_query),
